--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
     </style>
-      
+      <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
